# VPP_DUJ

./: .gitignore  VPP.md
05.11_opOverloading/: 20221104Main.cpp
07.10_io/: 20221007Main.cpp
1007_io/: 20221007Main  20221007Main.cpp
1007_io/self/: test  test.cpp
1014_references_pointer/: hash.cpp  references  summerMain.cpp
1021_trapez/: 20221021Main.cpp  vl3  vl3_trapez
1028_oop/: uhr.cpp  uhr.h
1028_oop/cast/: const_cast.cpp
1028_oop/self/: uhr.cpp  uhr.hpp
1105_opOverloading/: CMakeLists.txt  punkt3d.cpp  punkt3d.h
1111_inheritance/: 20221104Main.cpp  20221111Main.cpp  CMakeLists.txt  main  punkt3d.h
1118_binaryTree/: CMakeLists.txt  zweipol.cpp
1125_templates/: CMakeLists.txt  main.cpp
1209_fileOps/: CMakeLists.txt  buch.h  main.cpp
14.10_references_pointer/: references.cpp  summer.cpp
21.10_trapez/: vl3.cpp  vl3_trapez.cpp
28.10_oop/: 20221028Main.cpp
A_GrayCode/: GrayCode  GrayCode.cpp
A_StackTemplate/: CMakeLists.txt  main.cpp  stack.hpp
A_TestSoundex/: TestSoundex.pro  gtest_dependency.pri  soundex
A_funktionaleProgrammierung/: CMakeLists.txt  Container.hpp  main.cpp
P01/CLionP/: CMakeLists.txt  CMakeLists_test.txt  P01Main.cpp  fraesung.cpp  komponentenList.cpp  komponentenList.hpp  p01TestMain.cpp  p01test.h
P02/: CMakeLists.txt  p02Main.cpp
P02/include/: Bohrung.hpp  DeList.hpp  Fraesung.hpp  IKomponentenElement.hpp  Iterator.hpp  Werkstueck.hpp
P02/old/: komponentenList.cpp  p02test.h
P02/src/: Bohrung.cpp  DeList.cpp  Fraesung.cpp  Iterator.cpp  Komponente.cpp  Werkstueck.cpp
P03/: CMakeLists.txt  p02Main.cpp  p03Main.cpp  v3test.h  v3test_main.cpp
P03/include/: Bohrung.hpp  DeList.hpp  DeList_impl.hpp  Fraesung.hpp  IKomponente.hpp  Iterator.hpp  Iterator_impl.hpp  Komponente.hpp  Serializer.hpp  TElement.hpp  Werkstueck.hpp
P03/old/: komponentenList.hpp  p02TestMain.cpp
P03/src/: Bohrung.cpp  Fraesung.cpp  Komponente.cpp  Serializer.cpp  Werkstueck.cpp
Praktikum 1  WS20222023-20221111/: CMakeLists copy.txt  CMakeLists.txt  P01Main.cpp  fraesung.cpp  fraesung.h  komponentenList.cpp  komponentenList.h  p01test.h
Praktikum 1  WS20222023-20221111/CLionP/: CMakeLists.txt  CMakeLists_test.txt  fraesung.hpp  komponentenList.cpp  komponentenList.hpp
randExercises/ArrayBool/: ArrayBool.h
randExercises/Classes/: app.cpp  main  profile.cpp  profile.hpp
randExercises/FunctionobjectsLamdafunctions/: CMakeLists.txt  fibGen.hpp  main.cpp
randExercises/Soundex/: CMakeLists.txt  main.cpp  soundex.cpp  soundex.hpp  tst_soundex.h
randExercises/adventOfCode1/: CMakeLists.txt  main.cpp
randExercises/adventOfCode2/: CMakeLists.txt  main.cpp
randExercises/adventOfCode3/: CMakeLists.txt  main.cpp
randExercises/adventOfCode5/: CMakeLists.txt  main.cpp
randExercises/adventOfCode8/: CMakeLists.txt  main.cpp
randExercises/numcpp/: CMakeLists.txt
untitled folder/: CMakeLists.txt  main.cpp
